--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top1 bg-primary">
   <div class="div container">
-    <a class="navbar-brand" href="#">Dating App</a>
+    <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="router-link-active" >Dating App</a>
 
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Matches <span class="sr-only">(current)</span></a>
+      <li class="nav-item" routerLinkActive='active'>
+        <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active" >Matches <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
+      <li class="nav-item" routerLinkActive='active'>
+        <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="router-link-active" >Lists</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
+      <li class="nav-item" routerLinkActive='active'>
+        <a class="nav-link" [routerLink]="['/messages']" routerLinkActive="router-link-active" >Messages</a>
       </li>
     </ul>
 
