--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top img-thumbnail" src="{{user?.photoUrl}}" alt="{{user?.knownAs}}">
+          <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user?.knownAs}}">
           <div class="card-body">
             <div>
               <strong>Location:</strong>
@@ -62,12 +62,9 @@
                     </form>
                 </tab>
                 <tab heading="Edit Photos">
-                    <h4>Photos</h4>
-                    <p></p>
-                    
+                    <app-photo-editor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>                    
                 </tab>
- 
-                
+
               </tabset>
             </div>
       </div>
