Font Banger added and App Logo created

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top1 bg-primary">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top1 bg-primary bangersFont">
   <div class="div container">
-    <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="router-link-active" >Dating App</a>
+    <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="router-link-active" ><img src="{{'../../assets/datingapp_logo2.png'}}" alt=""></a>
 
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive='active'>
