--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 bangersFont">
   <div *ngIf="!registerMode" style="text-align: center">
     <h1>Find your match</h1>
     <p class="lead">Come on in to view your matches... All you need to do is sign up!</p>
@@ -15,4 +15,12 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-12 justify-content-center img-responsive">
+        <img alt="" src="../../assets/datingapp_logo2.png" style="max-width: inherit;">
+    </div>
+    
+  </div>
+
 </div>
