--- a/DatingApp-SPA/src/styles.css
+++ b/DatingApp-SPA/src/styles.css
@@ -6,6 +6,15 @@
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
 @import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
 
+@font-face {
+  font-family: "bangersFont";
+  src: url("./assets/fonts/Bangers/Bangers-Regular.ttf");
+}
+
+.bangersFont {
+  font-family: "bangersFont" !important;
+}
+
 .tab-panel {
     border: 1px solid #ddd;
     padding: 10px;
